--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
         <body>
             <div id="container">
                 <div id="cabecera">
-                     Hiperblog <span id="tagline">Tu blog de confianza</span>
+                     Hiperblog <span id="tagline">Tu blog de maestro</span>
                 </div>
                 <div id="post">
                      <h1>Este es el titulo atractivo e interesante del post</h1>
@@ -18,6 +18,7 @@
                         conferencias o salir en Youtube. Pero estadisticamente
                         no lo eres..... por ahora.
                      </p>
+                     <p>Suscribete y dale like</p>
                 </div>
             </div>
         </body>
