Una version de el Huperblog

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Bienvenidos al hiperblock</title>
+        <title>Bienvenidos al hiperblock 2.0</title>
         <link rel="stylesheet" href="C:\proyecto1\CSS\estilos.css">
     </head>
         <body>
