--- a/blogpost.html
+++ b/blogpost.html
@@ -6,6 +6,7 @@
         <body>
             <div id="container">
                 <div id="cabecera">
+                    <img id="logo" src="C:\proyecto1\CSS\imagenes\logo.jpg" />
                      Hiperblog <span id="tagline">Tu blog de cabecera</span>
                 </div>
                 <div id="post">
