--- a/blogpost.html
+++ b/blogpost.html
@@ -12,8 +12,8 @@
                 </div>
                 <div id="post">
                      <h1>Este es el titulo atractivo e interesante del post</h1>
-                     <p>Y este es el parrafo de inicio donde vamos a explicar las 
-                       cosas increibles que se pueden hacer con ramas
+                     <p>Y este es el pArrafo de inicio donde vamos a explicar las 
+                       cosas Increibles que se pueden hacer con ramas
                      </p>
                      <p>Los Blogs son la mejor forma de compartir
                         informacion y tus ideas. Mucho mas que ir a 
