--- a/blogpost.html
+++ b/blogpost.html
@@ -15,6 +15,8 @@
                      <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las 
                        cosas incre&iacute;bles que se pueden hacer con ramas
                      </p>
+                     <p><img src="C:\proyecto1\foto.jpg" width="100%">
+                     </p>
                      <p>Los Blogs son la mejor forma de compartir
                         informacion y tus ideas. Mucho mas que ir a 
                         conferencias o salir en Youtube. Pero estadisticamente
